substrate/frame/support/test/tests/pallet_ui/call_feeless_invalid_closure_arg3.stderr
error: Invalid pallet::call, feeless_if closure argument must have a reference to the same type as the dispatchable function argument
  --> tests/pallet_ui/call_feeless_invalid_closure_arg3.rs:31:43
   |
31 |         #[pallet::feeless_if(|_: &OriginFor<T>, _s: &u32| -> bool { true })]
   |                                                 ^^
